<resources>
    <string name="app_name">CycloGuardian</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="title_home">CycloGuardian</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="google_maps_api_key">AIzaSyBQVxEY1oOcWqyN2A4V0YqtWJpQR2KpFBY</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="launch_activity">Launch activity</string>
    <string name="text_chronometer">Session Time:</string>
    <string name="text_activityStart">Activity Start at:</string>
    <string name="text_activityStop">Activity Stop at:</string>
    <string name="text_activityElapsed">Time of Session:</string>
    <string name="text_numberIncidences">Number of incidences:</string>
    <string name="text_averageOvertaking">Average of overtaking:</string>
    <string name="options_gallery">Show gallery</string>
    <string name="optionsOneImage">Show last photo</string>
    <string name="state">STATE</string>
    <string name="service">SERVICE</string>
    <string name="camera_name">Camera</string>
    <string name="device">Device</string>
    <string name="title_fragment_map">MAP</string>
    <string name="title_fragment_image">IMAGE</string>
    <string name="title_fragment_gallery">GALLERY</string>
    <string name="title_fragment_graph">GRAPH</string>
    <string name="footer_graph">Sensor Distance</string>
    <string name="sensor1_footer">Data Sensor 1</string>
    <string name="sensor2_footer">Data Sensor 2</string>
    <string name="wifi_enabled">The WiFi is enabled</string>
    <string name="start_wifi_fail">Imposible to start WiFi. Try it later</string>
    <string name="gps_enabled">The GPS is enabled</string>
    <string name="gps_enabled_success">GPS enabled</string>
    <string name="gps_enable_fail">Imposible to enable GPS. Try it later</string>
    <string name="bluetooth_enabled">The Bluetooth is enabled</string>
    <string name="bluetooth_enabled_success">Bluetooth enabled</string>
    <string name="bluetooh_enabled_fail">Imposible to enable Bluetooth. Try it later</string>
    <string name="concet_wifi">Conected to</string>
    <string name="conect_wifi_fail">Imposible to connect to</string>
    <string name="try_later">. Try it now later</string>
    <string name="wifi_camera_disconnect">Camera wifi disconnected. Firts you have to enable the camera wifi</string>
    <string name="wifi_disabled">Red wifi desconectada. Firts you have to enable wifi</string>
    <string name="thershold_line">Limit</string>
    <string name="configure_camera">Please configure the Camera</string>
    <string name="configure_wifi">Please configure the WiFi</string>
    <string name="configure_GPS">Please configure the GPS</string>
    <string name="configure_BLE">Please configure the Bluetooth</string>
    <string name="configure_device">Please configure the device</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_add">&#xf067;</string>
    <string name="login_fail">Login failed</string>
    <string name="incorrect_email">Login failed: Incorrect email</string>
    <string name="incorrect_password">Login failde: Incorrect password</string>
    <string name="existing_email">This email already exists</string>
    <string name="signup_fail">Sign up failed</string>
    <string name="singup_success">Successfully created user</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="info">Information</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="title_activity_settings">Settings</string>
    <string name="conexion_server_fail">The connection with the server fail</string>
    <string name="license">Licenses</string>
    <string name="min_3_character">At least 3 characters</string>
    <string name="validate_phone">Enter a valid phone</string>
    <string name="validate_email">Enter a valid email address</string>
    <string name="validate_password">Between 4 and 10 alphanumeric characters</string>
    <string name="title_slide_1">Put Components</string>
    <string name="description_slide_1">Take your camera and your Arduino device and put them under the saddle.
        When you have finished, turn on both devices</string>
    <string name="title_slide_2">Login or SignUp</string>
    <string name="description_slide_2">After put the components into the bike you have, if you have an account you will log in.
        If you don\'t have you would create one</string>
    <string name="title_slide3">Settings</string>
    <string name="description_slide3">You have to enable all the service to start one activity. You might click in
            setting button next to name service</string>
    <string name="permisions_granted">All permissions granted</string>
    <string name="next">Next</string>
    <string name="title_slide_4">Permissions</string>
    <string name="description_slide_4">We need you to allow us to access the following services</string>
    <string name="move_map">Move map</string>
    <string name="icon_config">&#xf085;</string>
    <string name="title_about">CycloGuardian - "Metro y medio es vida"</string>
    <string name="desc_about">© 2018 Sergio Iglesias García</string>
    <string name="author">Author</string>
    <string name="country">Spain</string>
    <string name="author_name">Sergio Iglesias García</string>
    <string name="github">Fork on Github</string>
    <string name="user_github_url">https://github.com/sergio-iglega</string>
    <string name="contact">Contact Information</string>
    <string name="visit_web">Visit websit</string>


</resources>
