<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.NoActionBar2"
    tools:context="com.example.sergi.cycloguardian.Activities.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:background="@color/colorPrimaryDark"
        app:theme="@style/ToolBarStyle"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute" />

    <ImageView
        android:id="@+id/imageViewDispositivo"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCamera"
        app:srcCompat="@android:color/holo_red_dark" />

    <ImageView
        android:id="@+id/imageViewCamera"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBluetooth"
        app:srcCompat="@android:color/holo_red_dark" />

    <ImageView
        android:id="@+id/imageViewBluetooth"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewGPS"
        app:srcCompat="@android:color/holo_red_dark" />

    <ImageView
        android:id="@+id/imageViewGPS"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWifi"
        app:srcCompat="@android:color/holo_red_dark" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_spotify"
            android:layout_width="229dp"
            android:layout_height="63dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="51dp"
            android:onClick="startService"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDevice"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#7ab800"
            fancy:fb_focusColor="#9bd823"
            fancy:fb_fontIconResource="&#xf04b;"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text=" START MONITORING"
            fancy:fb_textColor="#FFFFFF" />

    <TextView
        fontPath="fonts/SeaBalance.ttf"
        android:id="@+id/textViewWifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="31dp"
        android:text="Wifi:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="MissingPrefix" />

    <ImageView
        android:id="@+id/imageViewWifi"
        android:layout_width="23dp"
        android:layout_height="18dp"
        android:layout_marginEnd="95dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="11dp"
        android:text="@string/service"
        android:textSize="12pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="11dp"
        android:text="@string/state"
        android:textSize="12pt"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/textViewGPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:text="GPS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWifi" />

    <TextView
        android:id="@+id/textViewBluetooht"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:text="Bluetooh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGPS" />

    <TextView
        android:id="@+id/textViewCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:text="@string/camera_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBluetooht" />

    <TextView
        android:id="@+id/textViewDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="67dp"
        android:layout_marginTop="40dp"
        android:text="@string/device"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCamera" />

</android.support.constraint.ConstraintLayout>
